--- a/info_way.css
+++ b/info_way.css
@@ -70,3 +70,11 @@
     overflow: hidden;
     padding: 10px;
  } 
+ footer{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: skyblue;
+    height: 40px;
+    padding-top: 10px;
+ }
